fixed color contrast for mainbody

--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,7 @@ nav a:hover {
 
 .mainbody {
     background: white;
-    color: rgb(29, 136, 161);
+    color: rgb(27, 129, 153);
     width: 80%;
     margin: 0 auto 0 auto;
     padding-top: 0px;
@@ -199,7 +199,7 @@ nav a:hover {
 
 .mainbody2 {
     background: white;
-    color: rgb(29, 136, 161);
+    color: rgb(27, 129, 153);
     height: 100%;
     margin: 0 auto 0 auto;
     padding-top: 0px;
